--- a/Views/Report/Index.cshtml
+++ b/Views/Report/Index.cshtml
@@ -27,6 +27,7 @@
         z-index: 1;
         position: relative;
         top: 3.9em;
+        font-size: 2.5rem !important;
     }
 
     .card-text {
