able to change themes

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,17 +39,17 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Themes</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Default</a>
+                            <a class="dropdown-item" href="#" name="default" onclick="methods.themes(this.name)">Default</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Slate</a>
+                            <a class="dropdown-item" href="#" name="slate" onclick="methods.themes(this.name)">Slate</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Blue Ocean</a>
+                            <a class="dropdown-item" href="#" name="ocean" onclick="methods.themes(this.name)">Blue Ocean</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Solar</a>
+                            <a class="dropdown-item" href="#" name="solar" onclick="methods.themes(this.name)">Solar</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Cyborg</a>
+                            <a class="dropdown-item" href="#" name="cyborg" onclick="methods.themes(this.name)">Cyborg</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Darkly</a>
+                            <a class="dropdown-item" href="#" name="darkly" onclick="methods.themes(this.name)">Darkly</a>
 
                         </div>
                     </li>
