--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,18 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="">
+    <div class="card border-primary mb-3" style="max-width: 20rem; margin: 3rem 24rem;">
+        <div class="card-header">Login</div>
+        <div class="card-body">
+            <div class="form-group">
+                <label class="col-form-label mt-4" for="inputDefault">Username</label>
+                <input type="text" class="form-control" placeholder="johnDoe@gmail.com" id="inputDefault">
+            
+                <label class="col-form-label mt-4" for="inputDefault">Password</label>
+                <input type="password" class="form-control" placeholder="!12345678abc#" id="inputDefault">
+            </div>
+            <button type="button" class="btn btn-outline-primary" style="width: 100%; padding: 15px; ">Primary</button>
+        </div>
+    </div>
 </div>
