--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Web.Optimization
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -8,97 +9,39 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap_cyborg.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/fontawesome.min.css">
-</head>
+@*<style>
+        .navBar-container {
+            display: none !important;
+        }
+    </style>*@
+    </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Hospital Management System</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <div class="navBar-container" style="">
+        @{
+            Html.RenderPartial("NavBar");
+        }
+    </div>
 
-            <div class="collapse navbar-collapse right-links" id="navbarColor01">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" asp-area="" asp-controller="Home" asp-action="Index">
-                            Home
-                            <span class="visually-hidden">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administration</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">System Users</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">User Roles</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Permissions</a>
-                            @*<div class="dropdown-divider"></div>*@
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Themes</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#" name="default" onclick="methods.themes(this.name)">Default</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#" name="slate" onclick="methods.themes(this.name)">Slate</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#" name="ocean" onclick="methods.themes(this.name)">Blue Ocean</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#" name="solar" onclick="methods.themes(this.name)">Solar</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#" name="cyborg" onclick="methods.themes(this.name)">Cyborg</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#" name="darkly" onclick="methods.themes(this.name)">Darkly</a>
-
-                        </div>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                </form>
-                <ul class="navbar-nav me-auto" style=" width: calc(100% - 56rem); ">
-                    
-                    <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
-                            <i class="fas fa-bell" style="font-size: 30px;color: #66541d;"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="fas fa-user-circle" style="font-size: 35px; position: relative; padding: 0px 20px; color: #5b4646; "></i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="fas fa-sign-out-alt" style=" font-size: 28px; position: relative; color: #5b4646; "></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div>
+    <div class="sideBar-container">
         @{
             Html.RenderPartial("_sideMenuBar");
         }
     </div>
-    <div class="container">
+    <div class="body-container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - Hospital_Management_System - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+    <div class="footer-container">
+        @{
+            Html.RenderPartial("Footer");
+        }
+    </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
     @await RenderSectionAsync("Scripts", required: false)
 </body>
