--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -62,6 +62,9 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+.navBar-container, .footer-container, .sideBar-container {
+    display: none;
+}
 .footer {
   position: absolute;
   bottom: 0;
@@ -69,3 +72,4 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
